fixed scrollbar overlaping the profile bar

--- a/app/assets/css/chat.css
+++ b/app/assets/css/chat.css
@@ -103,6 +103,8 @@
 .profile-bar {
   margin-bottom: auto;
   justify-content: center;
+  border-radius: 2px;
+  z-index: 10;
 }
 
 .message-content {
